infrastructure/authelia/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  labels:
    app: authelia
spec:
  selector:
    matchLabels:
      app: authelia
  replicas: 1
  revisionHistoryLimit: 2
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: authelia
    spec:
      terminationGracePeriodSeconds: 10
      enableServiceLinks: false  # important, as authelia would otherwise try to interpret the resulting kubernetes env vars
      containers:
      - name: authelia
        image: authelia/authelia:4
        #args: {}
        ports:
        - name: authelia
          containerPort: 9091
        #imagePullPolicy: IfNotPresent
#        env:
#        - name: POSTGRES_DB
#          valueFrom:
#            configMapKeyRef:
#              name: existdb-config
#              key: POSTGRES_DB
#        - name: PGDATA
#          valueFrom:
#            configMapKeyRef:
#              name: existdb-config
#              key: PGDATA
#        - name: POSTGRES_USER
#          valueFrom:
#            secretKeyRef:
#              name: existdb-secrets
#              key: POSTGRES_USER
#        - name: POSTGRES_PASSWORD
#          valueFrom:
#            secretKeyRef:
#              name: existdb-secrets
#              key: POSTGRES_PASSWORD
        volumeMounts:
        - name: config-files
          mountPath: '/config/'
          readOnly: true
        resources:
          requests:
            memory: 32Mi
          limits:
            memory: 1024Mi
      volumes:
      - name: config-files
        configMap:
          name: authelia-config

#  volumeClaimTemplates:
#  - metadata:
#      name: rabbitmq-data
#    spec:
#      accessModes:
#      - ReadWriteOnce
#      resources:
#        requests:
#          storage: 128Mi
