infrastructure/authelia/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: authelia
  labels:
    app: authelia
spec:
  type: LoadBalancer
  #clusterIP: None  # headless service for statefulset
  selector:
    app: authelia
  ports:
  - name: authelia
    port: 9091
    targetPort: authelia
